Bleep. Bloop. I am a bot.

--- a/Contributing.html
+++ b/Contributing.html
@@ -420,6 +420,11 @@ current platform. The following values are currently supported:</p>
 <td> No postprocessing, just use the provided path</td>
 </tr>
 <tr>
+<td> <code>dir</code>
+</td>
+<td> To include all files inside the directory (for generated docs, etc). The path must be a valid directory</td>
+</tr>
+<tr>
 <td> <code>exe</code>
 </td>
 <td> For executables. On Windows the <code>.exe</code> suffix is added to the path in <code>file</code>
