--- a/IDE-integration.html
+++ b/IDE-integration.html
@@ -686,6 +686,8 @@ removal of a key) are unlikely and will be announced in the release notes.</p>
 <a href="https://github.com/michaelbadcrumble/meson-ui">Meson-UI</a> (Meson build GUI)</li>
 <li>
 <a href="https://plugins.jetbrains.com/plugin/13269-meson-syntax-highlighter">Meson Syntax Highlighter</a> plugin for JetBrains IDEs.</li>
+<li>
+<a href="https://open-vsx.org/extension/asabil/meson">asabil.meson</a> extension for VS Code/Codium</li>
 </ul>
 
     </div>
