--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -292,6 +292,11 @@ $('body').removeClass('no-script');
 <td></td>
 </tr>
 <tr>
+<td> nvidia_hpc</td>
+<td> NVidia HPC SDK compilers</td>
+<td></td>
+</tr>
+<tr>
 <td> open64</td>
 <td> The Open64 Fortran Compiler</td>
 <td></td>
