--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -194,9 +194,10 @@ build files</a> and built-in options that are either
 universal options, base options, compiler options.</p>
 <h2 id="universal-options">Universal options</h2>
 <p>A list of these options can be found by running <code>meson --help</code>. All
-these can be set by passing to <code>meson</code> (aka <code>meson setup</code>) in any of
-these ways: <code>--option=value</code>, <code>--option value</code>, <code>-Doption=value</code>, or
-by setting them inside <code>default_options</code> of <code>project()</code> in your <code>meson.build</code>.</p>
+these can be set by passing <code>-Doption=value</code> to <code>meson</code> (aka <code>meson setup</code>), or
+by setting them inside <code>default_options</code> of <code>project()</code> in your <code>meson.build</code>.
+Some options can also be set by <code>--option=value</code>, or <code>--option value</code>--- a list
+is shown by running <code>meson setup --help</code>.</p>
 <p>For legacy reasons <code>--warnlevel</code> is the cli argument for the <code>warning_level</code> option.</p>
 <p>They can also be edited after setup using <code>meson configure -Doption=value</code>.</p>
 <p>Installation options are all relative to the prefix, except:</p>
@@ -486,7 +487,9 @@ two-way mapping:</p>
 </table>
 <p>All other combinations of <code>debug</code> and <code>optimization</code> set <code>buildtype</code> to <code>'custom'</code>.</p>
 <h2 id="base-options">Base options</h2>
-<p>These are set in the same way as universal options, but cannot be shown in the
+<p>These are set in the same way as universal options, either by <code>-Doption=value</code>,
+or by setting them inside <code>default_options</code> of <code>project()</code> in your <code>meson.build</code>.
+However, they cannot be shown in the
 output of <code>meson --help</code> because they depend on both the current platform and
 the compiler that will be selected. The only way to see them is to setup
 a builddir and then run <code>meson configure</code> on it with no options.</p>
@@ -631,7 +634,8 @@ embedded because <code>-Wl,-bitcode_bundle</code> is incompatible with both <cod
 <code>-Wl,-undefined,dynamic_lookup</code> which are necessary for shared modules to work.</p>
 <h2 id="compiler-options">Compiler options</h2>
 <p>Same caveats as base options above.</p>
-<p>The following options are available. Note that both the options themselves and
+<p>The following options are available. They can be set by passing <code>-Doption=value</code>
+to <code>meson</code>. Note that both the options themselves and
 the possible values they can take will depend on the target platform or
 compiler being used:</p>
 <table>
@@ -659,7 +663,7 @@ compiler being used:</p>
 <tr>
 <td> c_std</td>
 <td> none</td>
-<td> none, c89, c99, c11, c17, c18, gnu89, gnu99, gnu11, gnu17, gnu18</td>
+<td> none, c89, c99, c11, c17, c18, c2x, gnu89, gnu99, gnu11, gnu17, gnu18, gnu2x</td>
 <td> C language standard to use</td>
 </tr>
 <tr>
