--- a/Qt5-module.html
+++ b/Qt5-module.html
@@ -220,7 +220,14 @@ tools and steps required for Qt. The module has two methods.</p>
 <code>install_dir</code> directory to install to (optional).</li>
 <li>
 <code>build_by_default</code> when set to true, to have this target be built by default, that is, when invoking <code>meson compile</code>; the default value is false (optional).</li>
+<li>
+<code>qresource</code> rcc source file to extract ts_files from; cannot be used with ts_files kwarg. Available since v0.56.0.</li>
+<li>
+<code>rcc_extra_arguments</code>, any additional arguments to <code>rcc</code> (optional), when used with `qresource. Available since v0.56.0.</li>
 </ul>
+<p>Returns either: a list of custom targets for the compiled translations, or, if
+using a <code>qresource</code> file, a single custom target containing the processed
+source file, which should be passed to a main build target.</p>
 <h2 id="has_tools">has_tools</h2>
 <p>This method returns <code>true</code> if all tools used by this module are found, <code>false</code>
 otherwise.</p>
@@ -260,6 +267,14 @@ translations = qt5.compile_translations(ts_files : 'myTranslation_fr.ts', build_
 executable('myprog', 'main.cpp', 'myclass.cpp', moc_files,
            include_directories: inc,
            dependencies : qt5_dep)
+</code></pre>
+<p>Sometimes, translations are embedded inside the binary using qresource files.
+In this case the ts files do not need to be explicitly listed. For example:</p>
+<pre><code class="language-meson">qt5 = import('qt5')
+qt5_dep = dependency('qt5', modules: ['Core', 'Gui'])
+lang_cpp = qt5.compile_translations(qresource: 'lang.qrc')
+executable('myprog', 'main.cpp', lang_cpp,
+           dependencies: qt5_dep)
 </code></pre>
 
     </div>
