--- a/IDE-integration.html
+++ b/IDE-integration.html
@@ -470,12 +470,17 @@ line arguments, environment variable settings and how to process the output.</p>
     "is_parallel": true / false,
     "protocol": "exitcode" / "tap",
     "cmd": ["command", "to", "run"],
+    "depends": ["target1-id", "target2-id"],
     "env": {
         "VARIABLE1": "value 1",
         "VARIABLE2": "value 2"
     }
 }
 </code></pre>
+<p>The <code>depends</code> entry <em>(since 0.56.0)</em> contains target ids; they can be
+looked up in the targets introspection data.  The executable
+pointed to by <code>cmd</code> is also included in the entry, as are any
+arguments to the test that are build products.</p>
 <h2 id="build-system-files">Build system files</h2>
 <p>It is also possible to get Meson build files used in your current project. This
 can be done by running <code>meson introspect --buildsystem-files /path/to/builddir</code>.</p>
