--- a/Users.html
+++ b/Users.html
@@ -233,6 +233,8 @@ topic</a>.</p>
 <li>
 <a href="https://github.com/ebassi/emeus">Emeus</a>, constraint based layout manager for GTK+</li>
 <li>
+<a href="https://entangle-photo.org/">Entangle</a>, tethered camera control and capture desktop application</li>
+<li>
 <a href="https://github.com/trilader/arduino-esp8266-meson">ESP8266 Arduino sample project</a>, sample project for using the ESP8266 Arduino port with Meson</li>
 <li>
 <a href="https://github.com/jangernert/FeedReader">FeedReader</a>, a modern desktop application designed to complement existing web-based RSS accounts</li>
