--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -693,7 +693,7 @@ compiler being used:</p>
 <tr>
 <td> cpp_std</td>
 <td> none</td>
-<td> none, c++98, c++03, c++11, c++14, c++17, <br>c++1z, gnu++03, gnu++11, gnu++14, gnu++17, gnu++1z, <br> vc++14, vc++17, vc++latest</td>
+<td> none, c++98, c++03, c++11, c++14, c++17, c++2a <br>c++1z, gnu++03, gnu++11, gnu++14, gnu++17, gnu++1z, gnu++2a, <br> vc++14, vc++17, vc++latest</td>
 <td> C++ language standard to use</td>
 </tr>
 <tr>
