--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1803,7 +1803,7 @@ platform-specific edge-cases in joining two absolute paths.</p>
 has the value of the <code>prefix</code> option passed to Meson.</p>
 <p><code>MESONINTROSPECT</code> contains the path to the introspect command that
 corresponds to the <code>meson</code> executable that was used to configure the
-build. (This might be a different path then the first executable
+build. (This might be a different path than the first executable
 found in <code>PATH</code>.) It can be used to query build configuration. Note
 that the value will contain many parts, f.ex., it may be <code>python3 /path/to/meson.py introspect</code>. The user is responsible for splitting
 the string to an array if needed by splitting lexically like a UNIX
