--- a/Adding-new-projects-to-wrapdb.html
+++ b/Adding-new-projects-to-wrapdb.html
@@ -238,33 +238,74 @@ version: &lt;version_you_have_a_wrap_for&gt;
 will be posted in a comment to this issue.</p>
 <p>NOTE: Requesting a branch is not necessary. WrapDB maintainer can create the branch and
 modify the PR accordingly if the project repository exists.</p>
-<h3 id="add-a-new-wrap">Add a new wrap</h3>
-<p>First you need to fork the repository to your own page.
-Then you can create the first Wrap commit that usually looks something like this.</p>
-<pre><code>tar xzf libfoo-1.0.0.tar.gz
-git clone -b 1.0.0 git@github.com:yourusername/libfoo.git tmpdir
-mv tmpdir/.git libfoo-1.0.0
-rm -rf tmpdir
-cd libfoo-1.0.0
-git reset --hard
-emacs upstream.wrap meson.build
-&lt;verify that your project builds and runs&gt;
+<h3 id="creating-the-wrap-contents">Creating the wrap contents</h3>
+<p>Setting up the contents might seem a bit counterintuitive at
+first. Just remember that the outcome needs to have one (and only one)
+commit that has all the build definition files (i.e. <code>meson.build</code> and
+<code>meson_options.txt</code> files) and <em>nothing else</em>. It is good practice to
+have this commit in a branch whose name matches the release as
+described above.</p>
+<p>First you need to fork the repository to your own page using GitHub's
+fork button. Then you can clone the repo to your local machine.</p>
+<pre><code>git clone git@github.com:yourusername/libfoo.git foo-wrap
+</code></pre>
+<p>Create a new branch for your work:</p>
+<pre><code>git checkout -b 1.0.0
+</code></pre>
+<p>If you are adding new changes to an existing branch, leave out the
+<code>-b</code> argument.</p>
+<p>Now you need to copy the source code for the original project to this
+directory. If you already have it extracted somewhere, you'd do
+something like this:</p>
+<pre><code>cd /path/to/source/extract/dir
+cp -r * /path/to/foo-wrap
+</code></pre>
+<p>Now all the files should be in the wrap directory. Do <em>not</em> add them
+to Git, though. Neither now or at any time during this process. The
+repo must contain only the newly created build files.</p>
+<p>New release branches require an <code>upstream.wrap</code> file, so create one if
+needed.</p>
+<pre><code>${EDITOR} upstream.wrap
+</code></pre>
+<p>The file format is simple, see any existing wrapdb repo for the
+content. The checksum is SHA-256 and can be calculated with the
+following command on most unix-like operating systems:</p>
+<pre><code>sha256sum path/to/libfoo-1.0.0.tar.gz
+</code></pre>
+<p>Under macOS the command is the following:</p>
+<pre><code>shasum -a 256 path/to/libfoo-1.0.0.tar.gz
+</code></pre>
+<p>Now you can create the build files and work on them until the project
+builds correctly.</p>
+<pre><code>${EDITOR} meson.build meson_options.txt
+</code></pre>
+<p>When you are satisfied with the results, add the build files to Git
+and push the result to GitHub.</p>
+<pre><code>&lt;verify that your project builds and runs&gt;
 git add upstream.wrap meson.build
 git commit -a -m 'Add wrap files for libfoo-1.0.0'
-git push origin 1.0.0
+git push -u origin 1.0.0
 </code></pre>
-<p>Now you should create a pull request on GitHub. Remember to create it against the
-correct branch rather than master (<code>1.0.0</code> branch in this example). GitHub should do
-this automatically.</p>
+<p>Now you should create a pull request on GitHub. Try to create it
+against the correct branch rather than master (<code>1.0.0</code> branch in this
+example). GitHub should do this automatically.</p>
 <p>If the branch doesn't exist file a pull request against master.
 WrapDB maintainers can fix it before merging.</p>
+<p>If packaging review requires you to do changes, use the <code>--amend</code>
+argument to <code>commit</code> so that your branch will continue to have only
+one commit.</p>
+<pre><code>${EDITOR} meson.build
+git commit -a --amend
+git push --force
+</code></pre>
 <h2 id="what-is-done-by-wrapdb-maintainers">What is done by WrapDB maintainers</h2>
-<p><a href="Wrap-maintainer-tools.html">mesonwrap tools</a> must be used for the tasks below.</p>
+<p><a href="Wrap-maintainer-tools.html">mesonwrap tools</a> must be used for the tasks
+below.</p>
 <h3 id="adding-new-project-to-the-wrap-provider-service">Adding new project to the Wrap provider service</h3>
 <p>Each project gets its own repo. It is initialized like this:</p>
 <pre><code>mesonwrap new_repo --homepage=$HOMEPAGE --directory=$NEW_LOCAL_PROJECT_DIR $PROJECT_NAME
 </code></pre>
-<p>The command creates a new repository and uploads it to Github.</p>
+<p>The command creates a new repository and uploads it to GitHub.</p>
 <p><code>--version</code> flag may be used to create a branch immediately.</p>
 <h3 id="adding-a-new-branch-to-an-existing-project">Adding a new branch to an existing project</h3>
 <p>Create a new branch whose name matches the upstream release number.</p>
