--- a/Custom-build-targets.html
+++ b/Custom-build-targets.html
@@ -209,13 +209,13 @@ mytarget = custom_target('targetname',
 <code>${prefix}/subdir/output.bin</code>. Variable substitution works just like
 it does for source generation.</p>
 <p>See <a href="Generating-sources.html">Generating Sources</a> for more information on this topic.</p>
-<h2 id="details-on-compiler-invocations">Details on compiler invocations</h2>
+<h2 id="details-on-command-invocation">Details on command invocation</h2>
 <p>Meson only permits you to specify one command to run. This is by
 design as writing shell pipelines into build definition files leads to
-code that is very hard to maintain. If your compilation requires
+code that is very hard to maintain. If your command requires
 multiple steps you need to write a wrapper script that does all the
-necessary work. When doing this you need to be mindful of the
-following issues:</p>
+necessary work.</p>
+<p>When doing this you need to be mindful of the following issues:</p>
 <ul>
 <li>do not assume that the command is invoked in any specific directory</li>
 <li>a target called <code>target</code> file <code>outfile</code> defined in subdir <code>subdir</code>
