Bleep. Bloop. I am a bot.

--- a/Commands.html
+++ b/Commands.html
@@ -308,7 +308,7 @@ optional arguments:
 <pre><code>$ meson compile [-h] [--clean] [-C BUILDDIR] [-j JOBS] [-l LOAD_AVERAGE]
                 [-v] [--ninja-args NINJA_ARGS] [--vs-args VS_ARGS]
                 [--xcode-args XCODE_ARGS]
-                [TARGET [TARGET ...]]
+                [TARGET ...]
 </code></pre>
 <p>Builds a default or a specified target of a configured meson project.</p>
 <pre><code>positional arguments:
@@ -396,7 +396,7 @@ optional arguments:
              [-l {c,cpp,cs,cuda,d,fortran,java,objc,objcpp,rust}] [-b]
              [--builddir BUILDDIR] [-f] [--type {executable,library}]
              [--version VERSION]
-             [sourcefile [sourcefile ...]]
+             [sourcefile ...]
 </code></pre>
 <p>Creates a basic set of build files based on a template.</p>
 <pre><code>positional arguments:
@@ -652,7 +652,7 @@ Commands:
              [--num-processes NUM_PROCESSES] [-v] [-q]
              [-t TIMEOUT_MULTIPLIER] [--setup SETUP]
              [--test-args TEST_ARGS]
-             [args [args ...]]
+             [args ...]
 </code></pre>
 <p>Run tests for the configure meson project.</p>
 <pre><code>positional arguments:
