Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -770,6 +770,13 @@ or compiler being used:</p>
 <td> [none, legacy, f95, f2003, f2008, f2018]</td>
 <td> Fortran language standard to use</td>
 </tr>
+<tr>
+<td> cuda_ccbindir</td>
+<td></td>
+<td> filesystem path</td>
+<td> CUDA non-default toolchain directory to use (-ccbin) <em>(Added in 0.57.1)</em>
+</td>
+</tr>
 </tbody>
 </table>
 <p>The default values of <code>c_winlibs</code> and <code>cpp_winlibs</code> are in
