--- a/Users.html
+++ b/Users.html
@@ -230,6 +230,8 @@ topic</a>.</p>
 <li>
 <a href="https://github.com/bus1/dbus-broker">dbus-broker</a>, Linux D-Bus Message Broker</li>
 <li>
+<a href="https://github.com/dosbox-staging/dosbox-staging">DOSBox Staging</a>, DOS/x86 emulator</li>
+<li>
 <a href="http://dpdk.org/browse/dpdk">DPDK</a>, Data Plane Development Kit, a set of libraries and drivers for fast packet processing</li>
 <li>
 <a href="https://github.com/doitsujin/dxvk">DXVK</a>, a Vulkan-based Direct3D 11 implementation for Linux using Wine</li>
