--- a/Commands.html
+++ b/Commands.html
@@ -482,16 +482,24 @@ optional arguments:
 <p><em>(since 0.47.0)</em></p>
 <pre><code class="language-inc">$ meson install [-h] [-C WD] [--no-rebuild] [--only-changed] [--quiet]
                 [--destdir DESTDIR] [--dry-run]
+                [--skip-subprojects [SKIP_SUBPROJECTS]]
 </code></pre>
 <p>Installs the project to the prefix specified in <a href="Commands.html#setup"><code>setup</code></a>.</p>
 <pre><code class="language-inc">optional arguments:
-  -h, --help         show this help message and exit
-  -C WD              directory to cd into before running
-  --no-rebuild       Do not rebuild before installing.
-  --only-changed     Only overwrite files that are older than the copied file.
-  --quiet            Do not print every file that was installed.
-  --destdir DESTDIR  Sets or overrides DESTDIR environment. (Since 0.57.0)
-  --dry-run, -n      Doesn't actually install, but print logs.
+  -h, --help                            show this help message and exit
+  -C WD                                 directory to cd into before running
+  --no-rebuild                          Do not rebuild before installing.
+  --only-changed                        Only overwrite files that are older than
+                                        the copied file.
+  --quiet                               Do not print every file that was
+                                        installed.
+  --destdir DESTDIR                     Sets or overrides DESTDIR environment.
+                                        (Since 0.57.0)
+  --dry-run, -n                         Doesn't actually install, but print
+                                        logs. (Since 0.57.0)
+  --skip-subprojects [SKIP_SUBPROJECTS]
+                                        Do not install files from given
+                                        subprojects. (Since 0.58.0)
 </code></pre>
 <p>See <a href="Installing.html">the installation documentation</a> for more info.</p>
 <h4 id="examples5">Examples:</h4>
