Bleep. Bloop. I am a bot.

--- a/SimpleStart.html
+++ b/SimpleStart.html
@@ -316,7 +316,9 @@ is put in the <code>build</code> subdirectory and can be run directly from there
 <p><img src="images/linux_alldone.png" alt="All finished and ready to go" id="all-finished-and-ready-to-go"></p>
 <p>The project is now ready for development. You can edit the code with
 any editor and it is rebuilt by going in the <code>build</code> subdirectory and
-executing the <code>meson compile</code> command.</p>
+executing the <code>meson compile</code> command. If your version of Meson is too
+old, you can compile the project by running the command <code>ninja</code>
+instead.</p>
 
     </div>
         
