Bleep. Bloop. I am a bot.

--- a/Adding-new-projects-to-wrapdb.html
+++ b/Adding-new-projects-to-wrapdb.html
@@ -240,7 +240,11 @@ definition patch - a set of <code>meson.build</code> files - should be also
 provided.</li>
 </ul>
 <h3 id="request-a-new-repository">Request a new repository</h3>
-<p>Create an issue on the <a href="https://github.com/mesonbuild/wrapdb/issues">wrapdb bug
+<p><em>Note:</em> you should only do this if you have written the build files
+and want to contribute them for inclusion to WrapDB. The maintainers
+have only limited reesources and unfortunately can not take requests
+to write Meson build definitions for arbitrary projects.</p>
+<p>The submission starts by creating an issue on the <a href="https://github.com/mesonbuild/wrapdb/issues">wrapdb bug
 tracker</a> using <em>Title</em>
 and <em>Description</em> below as a template.</p>
 <p><em>Title:</em> <code>new wrap: &lt;project_name&gt;</code></p>
@@ -249,7 +253,9 @@ and <em>Description</em> below as a template.</p>
 version: &lt;version_you_have_a_wrap_for&gt;
 </code></pre>
 <p>Wait until the new repository or branch is created. A link to the new
-repository or branch will be posted in a comment to this issue.</p>
+repository or branch will be posted in a comment to this issue. After
+this you can createa a merge request in that repository for your build
+files.</p>
 <p>NOTE: Requesting a branch is not necessary. WrapDB maintainer can
 create the branch and modify the PR accordingly if the project
 repository exists.</p>
