Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -2326,8 +2326,7 @@ the positional argument, you can specify external dependencies to
 use with <code>dependencies</code> keyword argument.</p>
 </li>
 <li>
-<p><code>cmd_array()</code>: returns an array containing the command arguments for
-the current compiler.</p>
+<p><code>cmd_array()</code>: returns an array containing the command(s) for the compiler.</p>
 </li>
 <li>
 <p><code>compiles(code)</code>: returns true if the code fragment given in the
