--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@ developers. The first one is the mailing list, which is hosted at
 <p>The second way is via IRC. The channel to use is <code>#mesonbuild</code> at
 <a href="https://freenode.net/">Freenode</a>.</p>
 <h3 id="projects-using-meson"><a href="Users.html">Projects using Meson</a></h3>
-<p>Many projects out there are using Meson and their communities are also
-a great resource for learning about what (and what not too!) do when
-trying to convert to using Meson.</p>
+<p>Many projects are using Meson and they're
+a great resource for learning what to (and what not to!) do when
+converting existing projects to Meson.</p>
 <p><a href="Users.html">A short list of Meson users can be found here</a>
 but there are many more. We would love to hear about your success
 stories too and how things could be improved too!</p>
