--- a/Subprojects.html
+++ b/Subprojects.html
@@ -439,7 +439,8 @@ For example if the wrap file tracks a git branch, it won't pull latest commits.<
 <li>If the wrap file comes from wrapdb, the latest version of the wrap file will
 be pulled and used next time meson reconfigure the project. This can be
 triggered using <code>meson --reconfigure</code>. Previous source tree is not deleted, to
-prevent from any loss of local changes.</li>
+prevent from any loss of local changes. <em>Since 0.58.0</em> If <code>--reset</code> is
+specified, the source tree is deleted and new source is extracted.</li>
 <li>If subproject is currently in detached mode, a checkout of the revision from
 wrap file is performed. <em>Since 0.56.0</em> a rebase is also performed in case the
 revision already existed locally but was outdated. If <code>--reset</code> is specified,
