Bleep. Bloop. I am a bot.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ contributing can be found on the <a href="Contributing.html">contribution page</
 							– Simple getting started guide
 						</p>
 									<p>
-			<a href="Getting-meson.html">Getting meson</a>
+			<a href="Getting-meson.html">Getting Meson</a>
 						</p>
 									<p>
 			<a href="Quick-guide.html">Quickstart Guide</a>
