--- a/Getting-meson_zh.html
+++ b/Getting-meson_zh.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<title>Getting Meson</title>
+<title>获取Meson</title>
 
 <link rel="stylesheet" href="assets/css/custom_bootstrap.css" type="text/css">
 <link rel="stylesheet" href="assets/css/bootstrap-toc.min.css" type="text/css">
@@ -183,7 +183,7 @@ $('body').removeClass('no-script');
 </nav>
 
 <main>
-<div data-extension="core" data-hotdoc-in-toplevel="True" data-hotdoc-project="Meson-documentation" data-hotdoc-ref="Getting-meson.html" class="page_container" id="page-wrapper">
+<div data-extension="core" data-hotdoc-in-toplevel="True" data-hotdoc-project="Meson-documentation" data-hotdoc-ref="Getting-meson_zh.html" class="page_container" id="page-wrapper">
 <script src="assets/js/utils.js"></script>
 
 <div class="panel panel-collapse oc-collapsed" id="sidenav" data-hotdoc-role="navigation">
@@ -194,72 +194,34 @@ $('body').removeClass('no-script');
 <div id="body">
 	<div id="main">
 				    <div id="page-description" data-hotdoc-role="main">
-        <h1 id="getting-meson">Getting Meson</h1>
-<p>Meson is implemented in Python 3, and requires 3.6 or newer. If your
-operating system provides a package manager, you should install it
-with that. For platforms that don't have a package manager, you need
-to download it from <a href="https://www.python.org/downloads/">Python's home page</a>. See below for
-<a href="Getting-meson.html#platformspecific-install-quirks">platform-specific Python3 quirks</a>.</p>
-<h2 id="downloading-meson">Downloading Meson</h2>
-<p>Meson releases can be downloaded from the <a href="https://github.com/mesonbuild/meson/releases">GitHub release page</a>, and
-you can run <code>./meson.py</code> from inside a release or the git repository
-itself without doing anything special.</p>
-<p>On Windows, if you did not install Python with the installer options
-that make Python scripts executable, you will have to run <code>python /path/to/meson.py</code>, where <code>python</code> is Python 3.6 or newer.</p>
-<p>The newest development code can be obtained directly from <a href="https://github.com/mesonbuild/meson">Git</a>, and
-we strive to ensure that it will always be working and usable. All
-commits go through a pull-request process that runs CI and tests
-several platforms.</p>
-<h2 id="installing-meson-with-pip">Installing Meson with pip</h2>
-<p>Meson is available in the <a href="https://pypi.python.org/pypi/meson/">Python Package Index</a> and can be installed
-with <code>sudo pip3 install meson</code> which requires root and will install it
-system-wide.</p>
-<p>If you have downloaded a copy of the Meson sources already, you can
-install it with <code>sudo pip3 install path/to/source/root/</code>.</p>
-<p>Alternatively, you can use <code>pip3 install --user meson</code> which will
-install it for your user and does not require any special
-privileges. This will install the package in <code>~/.local/</code>, so you will
-have to add <code>~/.local/bin</code> to your <code>PATH</code>, and <code>sudo meson install</code>
-will be completely broken since the program will not be available to
-root. Only use a user copy of Meson if you do not care about
-installing projects as root.</p>
-<h2 id="installing-meson-and-ninja-with-the-msi-installer">Installing Meson and Ninja with the MSI installer</h2>
-<p>We provide an MSI installer on the <a href="https://github.com/mesonbuild/meson/releases">GitHub release page</a> that can be
-used to install both Meson and Ninja at once for Windows. It also
-contains an embedded copy of Python, so scripts that use the <a href="Python-module.html">Python
-module</a> and do not have any external dependencies
-will continue to work as expected.</p>
-<p>Please note that this is a new feature, so bug reports are expected
-and welcome!</p>
-<h2 id="dependencies">Dependencies</h2>
-<p>In the most common case, you will need the <a href="https://ninja-build.org/">Ninja executable</a> for
-using the <code>ninja</code> backend, which is the default in Meson. This backend
-can be used on all platforms and with all toolchains, including GCC,
-Clang, Visual Studio, MinGW, ICC, ARMCC, etc.</p>
-<p>You can use the version provided by your package manager if possible,
-otherwise download the binary executable from the <a href="https://github.com/ninja-build/ninja/releases">Ninja project's
-release page</a>.</p>
-<p>If you will only use the Visual Studio backend (<code>--backend=vs</code>) to
-generate Visual Studio solutions on Windows or the XCode backend
-(<code>--backend=xcode</code>) to generate XCode projects on macOS, you do not
-need Ninja.</p>
-<h1 id="platformspecific-install-quirks">Platform-specific install quirks</h1>
-<h2 id="windows-python3-quirks">Windows Python3 quirks</h2>
-<p>When installing Python 3, it is highly recommended (but not required)
-that you select the installer options as follows:</p>
+        <h1 id="meson">获取Meson</h1>
+<p>Meson基于Python3运行，要求Python版本3.5以上。 如果你的操作系统提供包管理器, 你应该用包管理器安装meson；如果没有包管理器，你应该在<a href="https://www.python.org/downloads/">Python主页</a>下载合适的Python3。相关请参阅<a href="Getting-meson_zh.html#%E7%89%B9%E6%AE%8A%E5%B9%B3%E5%8F%B0%E7%9A%84%E5%AE%89%E8%A3%85%E7%89%B9%E4%BE%8B">特殊平台的安装特例</a>.</p>
+<h2 id="meson1">下载Meson</h2>
+<p>Meson发行版可在 <a href="https://github.com/mesonbuild/meson/releases">GitHub发行页面</a>下载, 你可以在release的解压目录或者git仓库目录里直接运行 <code>./meson.py</code> ，不需要进行任何特殊操作。</p>
+<p>在Windows下,如果你安装Python时没有将Python路径添加到环境变量, 那你应该使用<code>python /path/to/meson.py</code>命令运行Meson,当然<code>python</code> 的版本应该大于3.5。</p>
+<p>最新的开发版本的源码可以直接通过<a href="https://github.com/mesonbuild/meson">Git</a>获得,我们尽可能保证它总是可以正常使用。所有的提交通过pull-request进行，此过程将运行 CI 并且会在多个平台进行测试。</p>
+<h2 id="pipmeson">使用pip安装Meson</h2>
+<p>Meson在<a href="https://pypi.python.org/pypi/meson/">Python包索引</a>中，可通过<code>pip3 install meson</code>命令安装，如果在root环境下，它会在系统范围内安装。</p>
+<p>相反,你也可以使用 <code>pip3 install --user meson</code>命令来为<code>user</code>用户单独安装，此过程不需要任何特殊权限. Meson会被安装到<code>~/.local/</code>目录下,所以你需要将 <code>~/.local/bin</code>添加至你的<code>PATH</code>.</p>
+<h2 id="msimesonninja">使用MSI安装包安装Meson和Ninja</h2>
+<p>我们也在<a href="https://github.com/mesonbuild/meson/releases">GitHub发行页面</a>提供MSI安装包，可以同时为Windows安装 Meson和Ninja。 它也包含一份嵌入性的Python拷贝, 所以<a href="Python-module.html">Python module</a>可以不靠任何外部依赖的情况下正如期望般的正常工作。</p>
+<p>因为这是新特性，请多留意，如果出现BUG欢迎反馈！</p>
+<h2 id="">所需依赖</h2>
+<p>最主要的, 你需要 <a href="https://ninja-build.org/">Ninja可执行程序</a> 来使用Meson默认的
+<code>ninja</code> 后端参数。这个参数可以用于所有平台和工具链包括 GCC, Clang, Visual Studio, MinGW,ICC, ARMCC.</p>
+<p>如果可能，你应该使用包管理器提供的版本，否则的话，你应该
+在[Ninja发行页面]下载可执行二进制文件。(https://github.com/ninja-build/ninja/releases).</p>
+<p>如果你只用Visual Studio后端参数 (<code>--backend=vs</code>)来生成Windows上的Visual Studio工程文件或者XCode后端参数 (<code>--backend=xcode</code>) 生成macOS上的
+XCode工程文件, 那么你不需要安装Ninja.</p>
+<h1 id="1">特殊平台的安装特例</h1>
+<h2 id="windows-python3">Windows Python3</h2>
+<p>安装Python3时,强烈推荐以下安装器选项 (非必须，请结合实际) :</p>
 <p><img src="images/py3-install-1.png" alt="installer step 1" title="Enable 'Add Python 3.6 to PATH' and click 'Customize installation'" id="installer-step-1">
 <img src="images/py3-install-2.png" alt="installer step 2" title="Optional Features: ensure 'pip' is enabled" id="installer-step-2">
 <img src="images/py3-install-3.png" alt="installer step 3" title="Advanced Options: enable 'Install for all users'" id="installer-step-3"></p>
-<p>With this, you will have <code>python</code> and <code>pip</code> in <code>PATH</code>, and you can
-install Meson with pip. You will also be able to directly run <code>meson</code>
-in any shell on Windows instead of having to run <code>py -3</code> with the full
-path to the <code>meson.py</code> script.</p>
-<h2 id="msys2-python3-quirks">MSYS2 Python3 quirks</h2>
-<p>If you are using MSYS2 on Windows as your development environment,
-please make sure that you <strong>do not use</strong> the <code>msys/python</code> package to
-provide Python 3. Use either <code>mingw32/mingw-w64-i686-python3</code> or
-<code>mingw64/mingw-w64-x86_64-python3</code> depending on which MinGW target you
-are building for.</p>
+<p>完成这个之后, <code>python</code> 和<code>pip</code>的路径会收录进<code>PATH</code>,你可以使用pip安装Meson. 你也可以在Windows任何终端下直接运行<code>meson</code>而不是不得不输入<code>py -3</code>完整路径去运行 <code>meson.py</code>脚本.</p>
+<h2 id="msys2-python3">MSYS2 Python3</h2>
+<p>如果你使用MSYS2作为你的Windows开发环境,请确信你<strong>没有</strong>将 <code>msys/python</code> 当作你的默认Python使用. 请使用 <code>mingw32/mingw-w64-i686-python3</code> 或者 <code>mingw64/mingw-w64-x86_64-python3</code>，这取决于MinGW不同的构建对象.</p>
 
     </div>
         
@@ -267,14 +229,7 @@ are building for.</p>
 
 
 
-		<div id="subpages">
-	<p><b>Subpages:</b></p>
-	<div class="thumb-subpages">
-										</div>
-							<p>
-			<a href="Getting-meson_zh.html">获取Meson</a>
-						</p>
-			</div>
+		
 	</div>
 	<div id="search_results">
 		<p>The results of the search are</p>
@@ -295,7 +250,7 @@ are building for.</p>
 <div id="toc-column">
 	
 		<div class="edit-button">
-		<a href="https://github.com/mesonbuild/meson/edit/master/docs/markdown/Getting-meson.md" data-hotdoc-role="edit-button">Edit on github</a>
+		<a href="https://github.com/mesonbuild/meson/edit/master/docs/markdown/Getting-meson_zh.md" data-hotdoc-role="edit-button">Edit on github</a>
 
 	</div>
 		<div id="toc-wrapper">
